--- a/1_introduction/alert.html
+++ b/1_introduction/alert.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="alert.js"></script>
 </head>
 <body>
-    <form action="">
-        <input type="text">
-    </form>
+    
 </body>
 </html>
